# keycloak-auth-demo

./: .gitignore  API_AUTH_CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SUCCESS.md  Dockerfile  EXPORT_SUMMARY.md  KEYCLOAK_DOCUMENTATION.md  README.md  SUCCESS.md  TESTING_SUMMARY.md  comprehensive_test.sh  create-package.sh  deploy.sh  docker-compose.yml  export-realm-simple.sh  jwt-decode.sh  package.json  quick_test.sh  run_api_tests.sh  setup-keycloak.sh  start.sh  test.sh  test_new_auth_flow.sh
.github/workflows/: api-tests-minimal.yml  api-tests-mocked.yml  api-tests-simple.yml  api-tests-ultra-simple.yml  api-tests.yml
backend/: .coverage  Dockerfile  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_simple.py
backend/app/: auth.py  config.py  main.py  models.py
backend/tests/: README.md  conftest.py  run_tests.py  test_basic.py
backend/tests/fixtures/: test_config.py  test_data.py
backend/tests/integration/: test_keycloak_integration.py  test_simple_integration.py
backend/tests/unit/: test_api_endpoints.py  test_simple_api.py
exports/20251013_193357/: CONFIGURATION_SUMMARY.md  DEPLOYMENT_NOTES.md  MANUAL_EXPORT_GUIDE.md  import-realm.sh
haproxy/: haproxy.cfg  jwt_validate.lua
haproxy/certs/: ca.crt  ca.key  server.crt  server.csr  server.key  server.pem
public/: debug.html  index.html  manifest.json  webauth.html
scripts/: generate-certs.sh  user-management.sh
src/: App.js
src/contexts/: AuthContext.js
src/pages/: CallbackPage.js  ChangePasswordPage.js  DashboardPage.js  LoginPage.js  WebAuthPage.js
